<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/navigation_home"/>

    <item
        android:id="@+id/nav_favorite"
        android:title="@string/navigation_favorite"/>

    <item
        android:title="@string/navigation_category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_psychology"
                    android:title="@string/navigation_psychology"/>
                <item
                    android:id="@+id/nav_recommend"
                    android:title="@string/navigation_recommend"/>
                <item
                    android:id="@+id/nav_movie"
                    android:title="@string/navigation_movie"/>
                <item
                    android:id="@+id/nav_not_boring"
                    android:title="@string/navigation_not_boring"/>
                <item
                    android:id="@+id/nav_design"
                    android:title="@string/navigation_design"/>
                <item
                    android:id="@+id/nav_company"
                    android:title="@string/navigation_company"/>
                <item
                    android:id="@+id/nav_finance"
                    android:title="@string/navigation_finance"/>
                <item
                    android:id="@+id/nav_internet"
                    android:title="@string/navigation_internet"/>
                <item
                    android:id="@+id/nav_game"
                    android:title="@string/navigation_game"/>
                <item
                    android:id="@+id/nav_music"
                    android:title="@string/navigation_music"/>
                <item
                    android:id="@+id/nav_comic"
                    android:title="@string/navigation_comic"/>
                <item
                    android:id="@+id/nav_sport"
                    android:title="@string/navigation_sport"/>
            </group>
        </menu>
    </item>
</menu>