<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/news_list_today"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <!--card_view:cardPreventCornerOverlap="true"-->
    <!--card_view:cardUseCompatPadding="true"-->
    <!--card_view:cardCornerRadius = "5dp"-->

    <android.support.v7.widget.CardView
        android:id="@+id/cv_news_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_title"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/news_picture"
                android:scaleType="centerCrop"/>

            <TextView
                android:padding="8dp"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/iv_title"
                android:text="@string/news_content"
                android:textColor="#000000"
                android:textSize="18sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>








